Created a style file and a folder with the images to use

--- a/excersice.html
+++ b/excersice.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excersice 1</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 
 <body>
 
-    <h1></h1>
+    <div class="header">
+
+        <h1>Rock Paper Scissors</h1>
+
+    </div>
+
+    <div class="buttons">
+
+        <div class="rock">
+            <img>
+            <button>Rock</button>
+        </div>
+
+        <div class="paper">
+            <img>
+            <button>Rock</button>
+        </div>
+
+        <div class="scissors">
+            <img>
+            <button>Rock</button>
+        </div>
+
+    </div>
     
 </body>
 </html>
