Shorter the names of images folder, added a few styles with features in the html and css files

--- a/excersice.html
+++ b/excersice.html
@@ -18,19 +18,19 @@
 
     <div class="buttons">
 
-        <div class="rock">
-            <img>
+        <div class="section">
+            <img src="images/Rock.png">
             <button>Rock</button>
         </div>
 
-        <div class="paper">
-            <img>
-            <button>Rock</button>
+        <div class="section">
+            <img src="images/Paper.png">
+            <button>Paper</button>
         </div>
 
-        <div class="scissors">
-            <img>
-            <button>Rock</button>
+        <div class="section">
+            <img src="images/Scissors.png">
+            <button>Scissors</button>
         </div>
 
     </div>
