Finished the Rock paper scissors UI

--- a/excersice.html
+++ b/excersice.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excersice 1</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -16,21 +16,23 @@
 
     </div>
 
+    <h2>Choose your weapon to fight against the Matrix</h2>
+
     <div class="buttons">
 
         <div class="section">
             <img src="images/Rock.png">
-            <button>Rock</button>
+            <button id="rock">Rock</button>
         </div>
 
         <div class="section">
             <img src="images/Paper.png">
-            <button>Paper</button>
+            <button id="paper">Paper</button>
         </div>
 
         <div class="section">
             <img src="images/Scissors.png">
-            <button>Scissors</button>
+            <button id="scissors">Scissors</button>
         </div>
 
     </div>
